--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,18 @@
-:root{
+:root {
     --color-langcorrect: #6174dd;
 }
 
-body{
+body {
     font-family: 'Open Sans', sans-serif;
     font-size: 15px;
 }
 
-h1{
+h1 {
     font-size: 4em;
 }
 
-h1,h2{
+h1,
+h2 {
     font-weight: bolder;
 }
 
@@ -25,41 +26,47 @@ h1,h2{
     width: 80%;
 }
 
-#skills-list{
+#skills-list {
     columns: 2;
     /* width: 40%; */
 }
 
-a{
+a {
     text-decoration: none;
     font-weight: bold;
     color: var(--color-langcorrect);
 }
-a:hover{
-    color:#3c4fbb;
+
+a:hover {
+    color: #3c4fbb;
 }
 
-#about a::after, #projects a::after {
+#about a::after,
+#projects a::after {
     font-family: "Font Awesome 5 Free";
     content: '\f08e';
     padding-left: 5px;
     color: currentColor;
 }
 
-.section-wrapper{
+.section-wrapper {
     padding-top: 7em;
     padding-bottom: 7em;
 }
 
-.bg-lc{
+.bg-lc {
     background: var(--color-langcorrect);
 }
 
-#projects h2{
+.color-lc {
+    color: var(--color-langcorrect);
+}
+
+#projects h2 {
     margin-bottom: 3em;
 }
 
-#contactDiv{
+#contactDiv {
     text-align: center;
     max-width: 600px;
     margin-left: auto;
